# autotests-api

./: .gitignore  README.md  api_client_create_course.py  api_client_create_exercise.py  api_client_get_user.py  course_service_pb2.py  course_service_pb2_grpc.py  grpc_client.py  grpc_course_client.py  grpc_course_server.py  grpc_server.py  httpx_authentication.py  httpx_delete_user.py  httpx_example.py  httpx_get_user.py  httpx_get_user_me.py  httpx_update_user.py  pydantic_json_schema_create_user.py  pydantic_json_schema_get_user.py  pyproject.toml  tcp_client.py  tcp_users_server.py  user_service_pb2.py  user_service_pb2_grpc.py  websocket_client.py  websocket_server.py  websocket_users_client.py  websocket_users_server.py
clients/: private_http_builder.py
clients/authentication/: authentication_client.py  authentication_schema.py
clients/courses/: courses_client.py  courses_schema.py
clients/exercises/: exercises_client.py  exercises_schema.py
clients/files/: files_client.py
clients/users/: private_users_client.py  public_users_client.py
