[project]
name = "autotests-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "grpcio>=1.74.0",
    "grpcio-tools>=1.74.0",
    "httpx>=0.28.1",
    "jsonschema>=4.26.0",
    "pydantic[email]>=2.12.5",
    "websockets>=15.0.1",
]
